# AFileManger

./: CMakeLists.txt  main.cpp  settings.ini
assets/: first.txt  second.txt  third.txt
headers/: ImageFilePreviewWidget.h  MainWindow.h  PasswordWindow.h  TextFilePreviewWidget.h  VideoFilePreviewWidget.h
headers/dialogs/: NewFileDialog.h
src/: AudioFilePreview.cpp  AudioFilePreview.h  FilePreviewWidget.cpp  FilePreviewWidget.h  FileTreeWidget.cpp  FileTreeWidget.h  ImageFilePreviewWidget.cpp  ImageFilePreviewWidget.h  MainWindow.cpp  MainWindow.h  PasswordWindow.cpp  PasswordWindow.h  TextFilePreviewWidget.cpp  TextFilePreviewWidget.h  VideoFilePreviewWidget.cpp  VideoFilePreviewWidget.h  mainwindow.cpp
src/dialogs/: NewFileDialog.cpp
